prevent overflowing

--- a/src/common/Addon/styles.less
+++ b/src/common/Addon/styles.less
@@ -34,19 +34,23 @@
             grid-area: header;
             display: flex;
             .name {
-                grid-area: name;
-                max-width: 350px;
                 font-size: 20px;
+                max-width: 350px;
                 overflow: hidden;
                 white-space: pre;
                 margin-right: 10px;
                 text-overflow: ellipsis;
             }
-            .version {
-                grid-area: version;
-                display: flex;
-                align-items: flex-end;
+            .version-container {
+                flex: 1;
+                overflow: hidden;
                 color: @colorwhite60;
+                .version {
+                    margin-top: 4px;
+                    overflow: hidden;
+                    white-space: pre;
+                    text-overflow: ellipsis;
+                }
             }
         }
         .type {
