--- a/src/common/UserPanel/styles.less
+++ b/src/common/UserPanel/styles.less
@@ -18,6 +18,10 @@
         }
         .email {
             color: @colorwhite;
+            width: 160px;
+            overflow: hidden;
+            white-space: pre;
+            text-overflow: ellipsis;
         }
         .log-out {
             color: @colorwhite40;
@@ -65,4 +69,4 @@
             }
         }
     }
-}
+} 
